[package]
name = "ShaderPreprocessor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ShaderPreprocessor"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
logos = "0.14"
walkdir = "2"
naga = { version = "22", features = [
    "wgsl-in",
    "wgsl-out",
    "glsl-in",
    "glsl-out",
    "spv-out",
] }